--- a/sass/layout/inscription_connexion.scss
+++ b/sass/layout/inscription_connexion.scss
@@ -4,7 +4,6 @@
 }
 
 .main__inscription__connexion {
-    min-height: 100vh;
     justify-content: center;
     align-items: center;
     .container {
