--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,5 +1,4 @@
 .main__index {
-    min-height: 100vh;
     font-size: 30px;
     text-align: center;
     display: flex;
